# IBI_PM

./: README.md  pyproject.toml
ibisimulation/: IBI_combine.py  config_loader.py  ibi.py  initialization.py  plot.py  potential.py  potential_manager.py  prep_cg.py  result_processor.py  simulation.py  tools_CG_polymer.py  tools_lammps.py  tools_structure.py  update.py  utils.py
ibisimulation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: get_str.py  run_map.py
src/: IBI_combine.py  ibi.py  potential.py  utils.py
test/toluene/: angle.txt  bl.txt  config.yaml  in.lmp  pdf.txt  plot_density.py  pot.table  pot_AA.table  tmp.data
