[project]
name = "ibisimulation"
version = "0.1.0"
description = "Iterative Boltzmann Inversion with pressure matching for coarse-grained MD simulations"
authors = [
  { name = "Z Yu", email = "your_email@domain.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pyyaml",
  "joblib"
]

[project.scripts]
ibisim = "ibisimulation.ibi:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
